--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -21,7 +21,9 @@ const postsForHomepage: HierarchicalBlogNode[] = Array.from(
 
 <Layout>
     <div class="mx-auto max-w-2xl">
-        <h1 class="mb-6 text-3xl font-semibold text-dark">Latest Posts</h1>
+        <h1 class="mb-6 font-serif text-3xl font-semibold text-dark">
+            Latest Posts
+        </h1>
         <Listing posts={postsForHomepage} />
     </div>
 </Layout>
