--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -42,7 +42,7 @@
 }
 
 @theme {
-    --font-sans: "Fira Sans", sans-serif;
+    --font-sans: "Open Sans Variable", sans-serif;
     --font-mono: "Fira Code Variable", monospace;
     --font-serif: "Lora Variable", serif;
 }
