Use experimental font api
Signed-off-by: Abhi Agarwal <abhiaagarwal01@gmail.com>

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -41,8 +41,8 @@
     }
 }
 
-@theme {
-    --font-sans: "Open Sans Variable", sans-serif;
-    --font-mono: "Fira Code Variable", monospace;
-    --font-serif: "Lora Variable", serif;
+@theme inline {
+    --font-sans: var(--font-open-sans);
+    --font-mono: var(--font-fira-code);
+    --font-serif: var(--font-lora);
 }
