--- a/src/layouts/Base.astro
+++ b/src/layouts/Base.astro
@@ -5,6 +5,8 @@ import "@fontsource-variable/open-sans";
 import "../styles/global.css";
 import Footer from "./Footer.astro";
 import Nav from "./Nav.astro";
+
+import { Font } from 'astro:assets';
 ---
 
 <!doctype html>
@@ -18,6 +20,9 @@ import Nav from "./Nav.astro";
         />
         <meta name="generator" content={Astro.generator} />
         <title>Abhi Agarwal</title>
+        <Font cssVariable="--font-lora" preload />
+        <Font cssVariable="--font-fira-code" preload />
+        <Font cssVariable="--font-open-sans" preload />
         <script>
             window.THEME_KEY = "theme-preference";
             window.THEMES = ["light", "dark", "system"];
