--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -2,7 +2,11 @@
 import Layout from "../layouts/Base.astro";
 ---
 
-<Layout>
+<Layout
+    title="About"
+    description="Learn more about Abhi Agarwal."
+    type="website"
+>
     <div class="m-auto max-w-2xl font-serif text-dark">
         <h1 class="mb-6 text-3xl font-semibold">Abhi Agarwal</h1>
         <div class="text-base/6">
