--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -19,7 +19,11 @@ const postsForHomepage: HierarchicalBlogNode[] = Array.from(
 );
 ---
 
-<Layout>
+<Layout
+    title="Abhi Agarwal"
+    description="Software Engineer. I build things and write about them."
+    type="website"
+>
     <div class="mx-auto max-w-2xl">
         <h1 class="mb-6 font-serif text-3xl font-semibold text-dark">
             Latest Posts
